# block-modeling

./: .coverage  README.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  pyproject.toml
src/dc_sbm/: sbm.py
src/dc_sbm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sbm/: base_sbm.py  dc_sbm.py  logging_config.py  matrix_transformations.py  optimizer.py  run_pipeline.py  sbm.py
tests/: test_base_sbm.py  test_base_spm.py  test_data.py  test_sbm.py
